[gd_scene load_steps=7 format=3 uid="uid://cxpg07686jq51"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_6fq4f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uelv"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umgtr"]
bg_color = Color(0.686275, 0.686275, 0.686275, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhinp"]
bg_color = Color(0.541176, 0.541176, 0.541176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_str4u"]
bg_color = Color(0.541176, 0.541176, 0.541176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_em7jn"]
bg_color = Color(0.541176, 0.541176, 0.541176, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fq4f")

[node name="AnswerPanelContainer" type="Panel" parent="."]
modulate = Color(0.94902, 0.964706, 1, 1)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 7.0
offset_right = 658.0
offset_bottom = -8.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3uelv")

[node name="GridContainer2" type="GridContainer" parent="AnswerPanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.5
offset_top = 2.5
offset_right = -2.5
offset_bottom = -2.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 10

[node name="QuestionGridContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -477.0
offset_top = 7.0
offset_right = -247.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_umgtr")

[node name="VBoxContainer" type="VBoxContainer" parent="QuestionGridContainer"]
layout_mode = 2
offset_left = 5.0
offset_right = 225.0
offset_bottom = 643.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="ShapeContainer1" type="Panel" parent="QuestionGridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 211)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lhinp")

[node name="ShapeContainer2" type="Panel" parent="QuestionGridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 211)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_str4u")

[node name="ShapeContainer3" type="Panel" parent="QuestionGridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 211)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_em7jn")
